--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "commentTranslate.source": "Google"
+    "commentTranslate.source": "Google",
+    "cmake.sourceDirectory": "${workspaceFolder}/ExampleCodes"
 }
